# meego-panel-pasteboard

./: .gitignore  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
data/: Makefile.am  meego-panel-pasteboard.desktop.in.in  moblin-panel-pasteboard.desktop.in.in
data/theme/: Makefile.am  panel.css
po/: POTFILES.in  ar.po  ast.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  th.po  tr.po  uk.po  wa.po  zh_CN.po  zh_TW.po
src/: Makefile.am  com.meego.UX.Shell.Panels.pasteboard.service.in  meego-panel-pasteboard.c  mnb-clipboard-item.c  mnb-clipboard-item.h  mnb-clipboard-view.c  mnb-clipboard-view.h  moblin-panel-pasteboard.c  org.moblin.UX.Shell.Panels.pasteboard.service.in
